# celltype-cli

./: .gitignore  install.sh  pyproject.toml
src/ct/: cli.py
src/ct/agent/: config.py  doctor.py  mcp_server.py  runner.py  sandbox.py  system_prompt.py
src/ct/cloud/: __init__.py  auth.py  client.py  image_builder.py  local_runner.py  manifest.py  router.py  tool_entrypoint.py  weight_downloader.py
src/ct/data/: catalog.py  loaders_dossier.py
src/ct/tools/: __init__.py  _container_tools.py  code.py  data_api.py  epigenomics.py  genomics.py  metabolic.py  safety.py  tool_entrypoint.py
src/ct/tools/alphafold2/: implementation.py  patch_jackhmmer.py  tool.yaml
src/ct/tools/alphafold2-multimer/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/boltz2/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/diffdock/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/esm2/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/esmfold/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/evo2/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/evo2-protein-design/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/genmol/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/molmim/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/msa-search/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/openfold2/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/openfold3/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/proteinmpnn/: Dockerfile  implementation.py  tool.yaml
src/ct/tools/rfdiffusion/: Dockerfile  implementation.py  tool.yaml
src/ct/ui/: terminal.py
tests/: test_billing.py  test_cli.py  test_cloud_auth.py  test_cloud_client.py  test_compute_router.py  test_e2e_local_gpu.py  test_extensibility.py  test_fallback_routing.py  test_gpu_registry.py  test_image_builder.py  test_local_runner.py  test_manifest.py  test_modal_generation.py  test_observability.py  test_security_mitigations.py  test_setup_gpu.py  test_stripe_integration.py  test_weight_management.py
tests/e2e/: kras_g12c.fasta  sotorasib.smi  test_e2e_cloud.py
